--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "packcheck",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "echo 'hello'",
+    "build": "tsc -p tsconfig.json --outDir dist",
+    "test": "jest",
     "prepublish": "npm run build"
   },
   "dependencies": {
@@ -15,11 +16,19 @@
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
+    "@types/decompress": "^4.2.3",
+    "@types/execa": "^0.9.0",
+    "@types/jest": "^23.1.1",
+    "@types/mkdirp": "^0.5.2",
+    "@types/node": "^10.3.3",
+    "@types/rimraf": "^2.0.2",
     "eslint": "^4.18.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-jest": "^21.12.2",
     "eslint-plugin-prettier": "^2.6.0",
-    "jest": "^22.4.2",
-    "prettier": "^1.10.2"
+    "jest": "^23",
+    "prettier": "^1.10.2",
+    "ts-jest": "^22.4.6",
+    "typescript": "^2.9.2"
   }
 }
