chore(package): add ts-node as devDependency
This makes testing changes easier:

```sh
$ npx ts-node src/index.ts
```

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^23",
     "prettier": "^1.10.2",
     "ts-jest": "^22.4.6",
+    "ts-node": "^6.1.1",
     "typescript": "^2.9.2"
   }
 }
