--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc -p tsconfig.json --outDir dist",
+    "build": "tsc -p tsconfig.json",
     "test": "jest",
     "prepublish": "npm run build"
   },
